    class FormattedParameters.
  - Removed unused import statements.
  - Simplified the FormattedDate class.

* XINS/Java Common Library:
  - Reabilitated the ServletRequestPropertyReader removed in the previous
    version as it's now used by the server framework.
  - Removed unused import statements.
  - Removed deprecated method controlTimeOut(Thread, TargetDescriptor).

* XINS/Java Client Framework:
  - Removed unused import statements.
  - Added some getter methods for the DataElement.
  - Each DataElement now must have a qualified name.
  - Fixed the bug 1010776 that did not close the sockets with CAPI.
    This bug has been in XINS since version 0.195.
  - _function is now used instead of function for the function name parameter.
  - Moved the Result class to a separate class.

* Logdoc:
  - Removed the counter that counted the number of time that a log was
    invoked.
  - Removed the attributes domain and default-locale from the DTD.

* Generated build file
  - Added a run target that asks for the command and API to execute.

* Moved the bin directory from xins/src to xins directory.

* Removed some TODOs done.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.205:

* XINS/Java Server Framework:
  - Replaced some tabs in the code by spaces.
  - The functions returns _InternalError when the API is deinitializing.
  - The FileWatcher is stopped when the API is stopped.
  - Adding some logs when bootstrapping or stopping the API.
  - Improved exception message for the AccessDeniedException and the
    NoSuchFunctionException.
  - Added some getter methods to get more information for the
    AccessDeniedException and the NoSuchFunctionException.
  - Fixed some Javadoc.
  - Replaced JDom element by org.xins.server.Element.
  - Removed the interface CallResult and the implementations, the result
    is now stored in FunctionResult.

* XINS/Java Common Library: