@@ -15,6 +15,7 @@ CHANGES INTRODUCED IN XINS 0.206:
     version as it's now used by the server framework.
   - Removed unused import statements.
   - Removed deprecated method controlTimeOut(Thread, TargetDescriptor).
+  - Added new method to create a TargetDescriptor with a default time-out.
 
 * XINS/Java Client Framework:
   - Removed unused import statements.
@@ -28,7 +29,10 @@ CHANGES INTRODUCED IN XINS 0.206:
 * Logdoc:
   - Removed the counter that counted the number of time that a log was
     invoked.
-  - Removed the attributes domain and default-locale from the DTD.
+  - Removed the attributes domain and default-locale from the DTD and log.xml.
+
+* Generated specification documentation:
+  - _function is now used instead of function for the function name parameter.
 
 * Generated build file
   - Added a run target that asks for the command and API to execute.
